# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.lcov  pyproject.toml  setup.cfg
.github/workflows/: my_workflow.yml
coverage/: lcov.info
gendiff/: __init__.py  cli.py  generate.py  generate_diff.py  generator.py  parse.py  parser.py  result_diff.py
gendiff/formatters/: choice_formatter.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_generate.py  test_generate_diff.py  test_generator.py  test_json.py  test_parse.py  test_parse_file.py  test_parser.py  test_plain.py  test_stylish.py  test_utils.py
tests/fixtures/: exp_json.txt  expected_result_for_plain.txt  expected_result_for_stylish.txt  file3.txt  input_diff_for_json.json  input_diff_for_stylish.json
